--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
     <!--main bölümü bitiş-->
 
-    <!--footer başlangıç-->
+    <!--footer -->
     <footer>
       <a href="#">WEB STUDIO</a>
       <p>
